--- a/src/app/admin/admin-products/admin-products.component.html
+++ b/src/app/admin/admin-products/admin-products.component.html
@@ -15,7 +15,7 @@
     </tr>
   </thead>
   <tbody>
-    @for (item of filteredProducts; track $index) {
+    @for (item of products; track $index) {
     <tr>
       <td>{{ item.title }}</td>
       <td>{{ item.price }}</td>
@@ -26,7 +26,23 @@
     }
   </tbody>
 </table>
+<div class="d-flex justify-content-between p-2">
+	<div class="col">
+    <ngb-pagination
+		[collectionSize]="collectionSize"
+		[(page)]="page"
+		[pageSize]="pageSize"
+		(pageChange)="refreshProducts()"
+	>
+	</ngb-pagination>
+  </div>
 
+	<select class="form-select" style="width: auto" [(ngModel)]="pageSize" (ngModelChange)="refreshProducts()">
+		<option [ngValue]="2">2 items per page</option>
+		<option [ngValue]="4">4 items per page</option>
+		<option [ngValue]="6">6 items per page</option>
+	</select>
+</div>
 } @else {
   <app-loader></app-loader>
 }
