--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,21 +1,19 @@
-<div class="row">
-  @for (product of products; track $index) {
-  <ng-container>
-    <div class="col">
-      <div class="card" style="width: 15rem">
-        <img src="{{ product.imageUrl }}" class="card-img-top" />
-        <div class="card-body">
-          <h5 class="card-title">{{ product.title }}</h5>
-          <p class="card-text">
-            {{ product.price| currency : "USD" : "symbol" }}
-          </p>
-          <a href="#" class="btn btn-primary">Add to Cart</a>
-        </div>
+  <div class="row">
+    <div class="col-md-4">
+      <app-product-filter [category]="category"></app-product-filter>
+    </div>
+    <div class="col-md-8">
+      <div class="row">
+        @for (product of filteredProducts; track $index) {
+        <ng-container>
+          <div class="col">
+            <app-product-card [product]="product"></app-product-card>
+          </div>
+          @if (($index +1)%2==0) {
+          <div class="w-100"></div>
+          }
+        </ng-container>
+        }
       </div>
     </div>
-    @if (($index +1)%2==0) {
-    <div class="w-100"></div>
-    }
-  </ng-container>
-  }
-</div>
+  </div>  
