--- a/src/app/admin/product-form/product-form.component.html
+++ b/src/app/admin/product-form/product-form.component.html
@@ -1,22 +1,22 @@
 <div class="row">
-  <div class="col-md-6 mt-3">
+  <div class="col-md-6">
     <form #f="ngForm" (ngSubmit)="save()">
       <div class="form-group">
         <label for="title">Title</label>
         <input
           #title="ngModel"
-          ngModel
-          name="title"
+          [(ngModel)]="products.title"
+          name="products"
           id="title"
           type="text"
           class="form-control"
-          minlength="6"
+          minlength="3"
           required
         />
         @if (title.touched && title.invalid) { @if (title.errors?.['required']){
         <div class="alert alert-danger">Title required</div>
         } @if (title.errors?.['minlength']) {
-        <div class="alert alert-danger">Min 6 chars required</div>
+        <div class="alert alert-danger">Min 3 chars required</div>
         } }
       </div>
       <div class="form-group">
@@ -27,7 +27,7 @@
           </div>
           <input
             #price="ngModel"
-            ngModel
+            [(ngModel)]="products.price"
             name="price"
             id="price"
             type="number"
@@ -47,7 +47,7 @@
         <label for="category">Category</label>
         <select
           #category="ngModel"
-          ngModel
+          [(ngModel)]="products.category"
           name="category"
           id="category"
           class="form-control"
@@ -66,7 +66,7 @@
         <label for="imageUrl">Image URL</label>
         <input
           #imageURL="ngModel"
-          ngModel
+          [(ngModel)]="products.imageUrl"
           name="imageUrl"
           id="imageUrl"
           type="url"
@@ -95,15 +95,12 @@
       </div>
     </form>
   </div>
-  <div class="col-md-6 mt-3">
-    @if (title.value) {
-    <div class="card" style="width: 18rem">
-      <img src="{{ imageURL.value }}" class="card-img-top" />
-      <div class="card-body">
-        <h5 class="card-title">{{ title.value }}</h5>
-        <p class="card-text">{{ price.value | currency : "USD" : "symbol" }}</p>
-      </div>
-    </div>
+  <div class="col-md-6">
+    @if (products.title || products.imageUrl) {
+    <app-product-card
+      [product]="products"
+      [showactions]="false"
+    ></app-product-card>
     }
   </div>
 </div>
