--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <app-header></app-header>
-<div class="container-fluid">
-    <router-outlet></router-outlet>
+<div class="container" style="margin-top: 80px;">
+  <router-outlet></router-outlet>
 </div>
