title changes in form

--- a/src/app/admin/product-form/product-form.component.html
+++ b/src/app/admin/product-form/product-form.component.html
@@ -6,7 +6,7 @@
         <input
           #title="ngModel"
           [(ngModel)]="products.title"
-          name="products"
+          name="title"
           id="title"
           type="text"
           class="form-control"
