--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,19 +1,22 @@
-  <div class="row">
-    <div class="col-md-4">
-      <app-product-filter [category]="category"></app-product-filter>
-    </div>
-    <div class="col-md-8">
-      <div class="row">
-        @for (product of filteredProducts; track $index) {
-        <ng-container>
-          <div class="col">
-            <app-product-card [product]="product"></app-product-card>
-          </div>
-          @if (($index +1)%2==0) {
-          <div class="w-100"></div>
-          }
-        </ng-container>
+<div class="row">
+  <div class="col-md-4">
+    <app-product-filter [category]="category"></app-product-filter>
+  </div>
+  <div class="col-md-8">
+    <div class="row">
+      @for (product of filteredProducts; track $index) {
+      <ng-container>
+        <div class="col">
+          <app-product-card
+            [product]="product"
+           
+          ></app-product-card>
+        </div>
+        @if (($index +1)%2==0) {
+        <div class="w-100"></div>
         }
-      </div>
+      </ng-container>
+      }
     </div>
-  </div>  
+  </div>
+</div>
